--- a/notebooks/Analysis.ipynb
+++ b/notebooks/Analysis.ipynb
@@ -1633,7 +1633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.3 (main, Apr 12 2023, 12:03:11) [GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
